--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <header>
         <h1>Bienvenue dans Ma Boutique en Ligne</h1>
         <p>Découvrez nos produits faits main avec amour.</p>
+        <nav class="menu">
+            <ul>
+                <li><a href="#produits">Nos produits</a></li>
+                <li><a href="#offres">Offres du moment</a></li>
+                <li><a href="#qui-sommes-nous">Qui sommes-nous</a></li>
+                <li><a href="#panier">Mon panier</a></li>
+                <li><a href="#contact">Contactez-nous</a></li>
+                <li><a href="#recherche">Rechercher</a></li>
+            </ul>
+        </nav>
     </header>
     
     <main>
@@ -35,6 +45,32 @@
                     <input type="submit" value="Acheter avec PayPal">
                 </form>
             </div>
+        </section>
+
+        <section id="offres">
+            <h2>Offres du moment</h2>
+            <p>Découvrez nos promotions et offres spéciales.</p>
+        </section>
+
+        <section id="qui-sommes-nous">
+            <h2>Qui sommes-nous</h2>
+            <p>En savoir plus sur notre histoire et notre passion.</p>
+        </section>
+
+        <section id="panier">
+            <h2>Mon panier</h2>
+            <p>Voici les articles que vous avez ajoutés à votre panier.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contactez-nous</h2>
+            <p>Vous avez des questions ? <a href="mailto:contact@maboutique.com">Envoyez-nous un e-mail</a></p>
+        </section>
+
+        <section id="recherche">
+            <h2>Rechercher</h2>
+            <input type="text" placeholder="Rechercher des produits...">
+            <button type="submit">Rechercher</button>
         </section>
     </main>
 
