--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
         </nav>
     </header>
     
+    <!-- Ajout du carrousel -->
+    <section class="carrousel">
+        <div class="carrousel-container">
+            <div class="carrousel-item">
+                <a href="#produit1">
+                    <img src="images/produit1.jpg" alt="Produit 1">
+                    <h3>Produit 1</h3>
+                </a>
+            </div>
+            <div class="carrousel-item">
+                <a href="#produit2">
+                    <img src="images/produit2.jpg" alt="Produit 2">
+                    <h3>Produit 2</h3>
+                </a>
+            </div>
+            <!-- Ajoute plus d'éléments de carrousel ici -->
+        </div>
+    </section>
+
     <main>
         <section id="produits">
             <h2>Nos Produits</h2>
@@ -77,5 +96,8 @@
     <footer>
         <p>&copy; 2025 Ma Boutique en Ligne. Tous droits réservés.</p>
     </footer>
+
+    <!-- Script JavaScript pour le défilement du carrousel -->
+    <script src="scripts.js"></script>
 </body>
 </html>
