--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="carrousel-container">
             <div class="carrousel-item">
                 <a href="#produit1">
-                    <img src="images/produit1.jpg" alt="Produit 1">
+                    <img src="Module B&R.jpg" alt="Produit 1">
                     <h3>Produit 1</h3>
                 </a>
             </div>
             <div class="carrousel-item">
                 <a href="#produit2">
-                    <img src="images/produit2.jpg" alt="Produit 2">
+                    <img src="Machine 22.jpg" alt="Produit 2">
                     <h3>Produit 2</h3>
                 </a>
             </div>
