--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
     <section class="carrousel">
         <div class="carrousel-container">
             <div class="carrousel-item">
-                <a href="#produit1">
-                    <img src="Module B&R.jpg" alt="Produit 1">
-                    <h3>Produit 1</h3>
-                </a>
+                <img src="images/produit1.jpg" alt="Produit 1">
+                <div class="carrousel-text">
+                    <h3><a href="#produit1">Produit 1</a></h3>
+                    <p>Description du produit 1. Découvrez les caractéristiques uniques de ce produit.</p>
+                </div>
             </div>
             <div class="carrousel-item">
-                <a href="#produit2">
-                    <img src="Machine 22.jpg" alt="Produit 2">
-                    <h3>Produit 2</h3>
-                </a>
+                <img src="images/produit2.jpg" alt="Produit 2">
+                <div class="carrousel-text">
+                    <h3><a href="#produit2">Produit 2</a></h3>
+                    <p>Description du produit 2. Découvrez les caractéristiques uniques de ce produit.</p>
+                </div>
             </div>
             <!-- Ajoute plus d'éléments de carrousel ici -->
         </div>
