--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             </div>
             <!-- Ajoute plus d'éléments de carrousel ici -->
         </div>
+        <button class="carrousel-prev" onclick="showPrevItem()">&#10094;</button>
+        <button class="carrousel-next" onclick="showNextItem()">&#10095;</button>
     </section>
 
     <main>
