--- a/index.html
+++ b/index.html
@@ -27,20 +27,37 @@
         <button class="carrousel-prev" onclick="showPrevItem()">&#10094;</button>
         <div class="carrousel-container">
             <div class="carrousel-item">
-                <img src="Machine 22.jpg" alt="Produit 1">
-                <div class="carrousel-text">
-                    <h3><a href="#produit1">Produit 1</a></h3>
-                    <p>Description du produit 1. Découvrez les caractéristiques uniques de ce produit.</p>
+                <div class="carrousel-product">
+                    <img src="Machine 22.jpg" alt="Produit 1">
+                    <div class="carrousel-text">
+                        <h3><a href="#produit1">Produit 1</a></h3>
+                        <p>Description du produit 1. Découvrez les caractéristiques uniques de ce produit.</p>
+                    </div>
+                </div>
+                <div class="carrousel-product">
+                    <img src="Module B&R.jpg" alt="Produit 2">
+                    <div class="carrousel-text">
+                        <h3><a href="#produit2">Produit 2</a></h3>
+                        <p>Description du produit 2. Découvrez les caractéristiques uniques de ce produit.</p>
+                    </div>
                 </div>
             </div>
             <div class="carrousel-item">
-                <img src="Module B&R.jpg" alt="Produit 2">
-                <div class="carrousel-text">
-                    <h3><a href="#produit2">Produit 2</a></h3>
-                    <p>Description du produit 2. Découvrez les caractéristiques uniques de ce produit.</p>
+                <div class="carrousel-product">
+                    <img src="Machine 22.jpg" alt="Produit 3">
+                    <div class="carrousel-text">
+                        <h3><a href="#produit3">Produit 3</a></h3>
+                        <p>Description du produit 3. Découvrez les caractéristiques uniques de ce produit.</p>
+                    </div>
+                </div>
+                <div class="carrousel-product">
+                    <img src="Module B&R.jpg" alt="Produit 4">
+                    <div class="carrousel-text">
+                        <h3><a href="#produit4">Produit 4</a></h3>
+                        <p>Description du produit 4. Découvrez les caractéristiques uniques de ce produit.</p>
+                    </div>
                 </div>
             </div>
-            <!-- Ajoute plus d'éléments de carrousel ici -->
         </div>
         <button class="carrousel-next" onclick="showNextItem()">&#10095;</button>
     </section>
