--- a/index.html
+++ b/index.html
@@ -27,35 +27,31 @@
         <button class="carrousel-prev" onclick="showPrevItem()">&#10094;</button>
         <div class="carrousel-container">
             <div class="carrousel-item">
-                <div class="carrousel-product">
-                    <img src="Machine 22.jpg" alt="Produit 1">
-                    <div class="carrousel-text">
-                        <h3><a href="#produit1">Produit 1</a></h3>
-                        <p>Description du produit 1. Découvrez les caractéristiques uniques de ce produit.</p>
-                    </div>
-                </div>
-                <div class="carrousel-product">
-                    <img src="Module B&R.jpg" alt="Produit 2">
-                    <div class="carrousel-text">
-                        <h3><a href="#produit2">Produit 2</a></h3>
-                        <p>Description du produit 2. Découvrez les caractéristiques uniques de ce produit.</p>
-                    </div>
+                <img src="Machine 22.jpg" alt="Projet 1">
+                <div class="carrousel-text">
+                    <h3><a href="#projet1">Projet 1</a></h3>
+                    <p>Description du projet 1. Découvrez les détails uniques de ce projet.</p>
                 </div>
             </div>
             <div class="carrousel-item">
-                <div class="carrousel-product">
-                    <img src="Machine 22.jpg" alt="Produit 3">
-                    <div class="carrousel-text">
-                        <h3><a href="#produit3">Produit 3</a></h3>
-                        <p>Description du produit 3. Découvrez les caractéristiques uniques de ce produit.</p>
-                    </div>
+                <img src="Module B&R.jpg" alt="Projet 2">
+                <div class="carrousel-text">
+                    <h3><a href="#projet2">Projet 2</a></h3>
+                    <p>Description du projet 2. Découvrez les détails uniques de ce projet.</p>
                 </div>
-                <div class="carrousel-product">
-                    <img src="Module B&R.jpg" alt="Produit 4">
-                    <div class="carrousel-text">
-                        <h3><a href="#produit4">Produit 4</a></h3>
-                        <p>Description du produit 4. Découvrez les caractéristiques uniques de ce produit.</p>
-                    </div>
+            </div>
+            <div class="carrousel-item">
+                <img src="Machine 22.jpg" alt="Projet 3">
+                <div class="carrousel-text">
+                    <h3><a href="#projet3">Projet 3</a></h3>
+                    <p>Description du projet 3. Découvrez les détails uniques de ce projet.</p>
+                </div>
+            </div>
+            <div class="carrousel-item">
+                <img src="Module B&R.jpg" alt="Projet 4">
+                <div class="carrousel-text">
+                    <h3><a href="#projet4">Projet 4</a></h3>
+                    <p>Description du projet 4. Découvrez les détails uniques de ce projet.</p>
                 </div>
             </div>
         </div>
@@ -65,26 +61,7 @@
     <main>
         <section id="produits">
             <h2>Nos Produits</h2>
-            <div class="produit">
-                <img src="images/produit1.jpg" alt="Produit 1">
-                <h3>Produit 1</h3>
-                <p>Description du produit 1.</p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="VOTRE_BOUTON_ID">
-                    <input type="submit" value="Acheter avec PayPal">
-                </form>
-            </div>
-            <div class="produit">
-                <img src="images/produit2.jpg" alt="Produit 2">
-                <h3>Produit 2</h3>
-                <p>Description du produit 2.</p>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="VOTRE_BOUTON_ID">
-                    <input type="submit" value="Acheter avec PayPal">
-                </form>
-            </div>
+            <!-- Contenu existant -->
         </section>
 
         <section id="offres">
