--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Découvrez nos produits faits main avec amour.</p>
         <nav class="menu">
             <ul>
-                <li><a href="#produits">Nos produits</a></li>
+                <li><a href="produits.html">Nos produits</a></li>
                 <li><a href="#offres">Offres du moment</a></li>
                 <li><a href="#qui-sommes-nous">Qui sommes-nous</a></li>
                 <li><a href="#panier">Mon panier</a></li>
