--- a/index.html
+++ b/index.html
@@ -58,19 +58,38 @@
         <button class="carrousel-next" onclick="showNextItem()">&#10095;</button>
     </section>
 
-   <section class="testimonials">
+ <section class="testimonials">
+    <h2>Ce que disent nos clients</h2>
     <div class="testimonial">
-        <h2>Ce que disent nos clients</h2>
         <div class="testimonial-content">
             <p>"Produits de grande qualité, je suis ravi de mon achat !"</p>
             <div class="rating">
                 &#9733;&#9733;&#9733;&#9733;&#9734; <!-- 4 étoiles -->
             </div>
             <h4>- Jean Dupont</h4>
-            <button onclick="location.href='#lien-vers-la-page-de-notation'">Noter mon expérience</button>
         </div>
     </div>
+    <div class="testimonial">
+        <div class="testimonial-content">
+            <p>"Service client exceptionnel et livraison rapide."</p>
+            <div class="rating">
+                &#9733;&#9733;&#9733;&#9733;&#9733; <!-- 5 étoiles -->
+            </div>
+            <h4>- Marie Lafont</h4>
+        </div>
+    </div>
+    <div class="testimonial">
+        <div class="testimonial-content">
+            <p>"Les produits sont encore mieux que ce que j'espérais !"</p>
+            <div class="rating">
+                &#9733;&#9733;&#9733;&#9733;&#9734; <!-- 4 étoiles -->
+            </div>
+            <h4>- Jacques Moreau</h4>
+        </div>
+    </div>
+    <button class="view-all" onclick="location.href='#lien-vers-la-page-de-tous-les-avis'">Voir tous les avis</button>
 </section>
+
 
     
 
