--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h4>- Jacques Moreau</h4>
         </div>
     </div>
-    <button class="view-all" onclick="location.href='avis.html">Voir tous les avis</button>
+    <button class="view-all" onclick="location.href='avis.html'">Voir tous les avis</button>
 </section>
 
     <section class="submit-review">
