--- a/index.html
+++ b/index.html
@@ -117,5 +117,13 @@
 
     <!-- Script JavaScript pour le défilement du carrousel -->
     <script src="scripts.js"></script>
+
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+   (function() {
+      emailjs.init("YOUR_USER_ID");
+   })();
+</script>
+
 </body>
 </html>
