--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ document.getElementById('review-form').addEventListener('submit', function(event
 
     console.log('Template Params:', templateParams);
 
-    emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', templateParams)
+    emailjs.send('service_80qzljh', 'template_cz6k3it', templateParams)
         .then((response) => {
             console.log('SUCCESS!', response.status, response.text);
             alert('Avis soumis avec succès !');
