--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="produits.html">Nos produits</a></li>
-                <li><a href="#offres">Offres du moment</a></li>
+                <li><a href="offres.html">Offres du moment</a></li>
                 <li><a href="#qui-sommes-nous">Qui sommes-nous</a></li>
                 <li><a href="#panier">Mon panier</a></li>
                 <li><a href="#contact">Contactez-nous</a></li>
